--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "~0.1000.8",
-    "@angular/compiler-cli": "~10.0.14",
-    "@angular/cli": "^10.0.8",
     "@angular/animations": "~10.0.14",
+    "@angular/cli": "^10.0.8",
     "@angular/common": "~10.0.14",
     "@angular/compiler": "~10.0.14",
+    "@angular/compiler-cli": "~10.0.14",
     "@angular/core": "~10.0.14",
     "@angular/forms": "~10.0.14",
     "@angular/platform-browser": "~10.0.14",
@@ -28,9 +28,9 @@
     "@types/node": "^14.6.2",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.1",
+    "typescript": "^3.9.6",
     "upgrade-node-modules": "^1.3.3",
-    "zone.js": "~0.11.1",
-    "typescript": "^3.9.6"
+    "zone.js": "~0.11.1"
   },
   "devDependencies": {
     "codelyzer": "^6.0.0",
