--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "cyrillic-to-translit-js": "^3.1.0",
     "express": "^4.17.1",
+    "google-tts-api": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.27",
     "moment": "^2.27.0",
@@ -41,7 +42,9 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "@types/node": "^16.7.2",
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "typescript": "^4.3.5"
   }
 }
