--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "cyrillic-to-translit-js": "^3.1.0",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "google-tts-api": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
