--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@fortawesome/fontawesome-free": "^5.1.0-9",
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/jasmine": "~3.5.14",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.6.2",
+    "peer": "^0.6.1",
+    "peerjs-client": "^0.3.15",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.1",
     "typescript": "^3.9.6",
