--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "npm-check-updates": "^7.1.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "peer": "^0.6.1",
     "socket.io": "^2.4.0"
   },
   "devDependencies": {
