--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@types/jasmine": "~3.5.14",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.6.2",
+    "google-tts-api": "^2.0.2",
     "peer": "^0.6.1",
     "peerjs-client": "^0.3.15",
     "rxjs": "~6.6.2",
