--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@fingerprintjs/fingerprintjs": "^3.3.3",
     "@fortawesome/fontawesome-free": "^5.1.0-9",
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/jasmine": "~3.5.14",
@@ -34,6 +35,7 @@
     "tslib": "^2.0.1",
     "typescript": "^3.9.6",
     "upgrade-node-modules": "^1.3.3",
+    "uuid": "^3.4.0",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
