--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "peer": "^0.6.1",
-    "socket.io": "^2.4.0"
+    "socket.io": "2.3"
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
