--- a/client/package.json
+++ b/client/package.json
@@ -27,18 +27,17 @@
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/jasmine": "~3.5.14",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.6.2",
     "google-tts-api": "^2.0.2",
     "peer": "^0.6.1",
     "peerjs-client": "^0.3.15",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.1",
-    "typescript": "^3.9.6",
     "upgrade-node-modules": "^1.3.3",
     "uuid": "^3.4.0",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
+    "@types/node": "^18.8.5",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.2",
@@ -49,6 +48,7 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
     "ts-node": "~9.0.0",
-    "tslint": "~6.1.3"
+    "tslint": "~6.1.3",
+    "typescript": "^3.9.10"
   }
 }
